| Summary: | ASTERISK-22347: [patch]res_xmpp timeout when google sends blank responses ' ' | ||
| Reporter: | Andrew Nagy (tm1000) | Labels: | |
| Date Opened: | 2013-08-20 10:47:29 | Date Closed: | 2013-09-06 20:05:02 |
| Priority: | Minor | Regression? | No |
| Status: | Closed/Complete | Components: | Resources/res_xmpp |
| Versions: | 11.5.0 | Frequency of Occurrence | Occasional |
| Related Issues: | |||
| Environment: | CentOS 6.4 | Attachments: | ( 0) xmpp_fix_1.diff |
| Description: | Sometimes the Google Voice servers have a bad habit of sending out 1 byte replies to the xmpp resource. When a blank 1 byte reply is received from the socket the buffer attempts to wait (endlessly) for the rest of the reply from google.
This effectively blocks the socket and google voice calls will no longer come into the server. This patch allows the xmpp module to correctly detect empty packets and send out ping replies to google. It also sets a socket timeout on the default socket which prevents the xmpp socket from closing and preventing future google voice calls from coming into the server. Furthermore instead of sending an empty reply back to google we send a proper xmpp ping reply back. Finally I have also added several more socket messages (near the end) | ||
| Comments: | By: Rusty Newton (rnewton) 2013-08-21 17:11:23.021-0500 Thanks Andrew! By: Kinsey Moore (kmoore) 2013-09-09 08:14:39.010-0500 Andrew, Sorry for the lack of communication here. On Friday, I went ahead and addressed the issues raised on this on reviewboard, addressed some issues that I found, and got this committed to 11, 12, and trunk. By: Andrew Nagy (tm1000) 2013-09-09 15:34:17.684-0500 Kinsey, No problem. You guys rock. Thanks! | ||